Arreglado los nombres de los componentes y las lineas de las medias se apilan #44 #45

--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -86,166 +86,166 @@ chartlabel.thirdquartile=Third Quartile
 chartlabel.atypicalValue=Atypical Value
 chart.mean=Mean
 
-component.COMPONENT_NOT_AVAILABLE=Component not available
-eventname.EVENT_NOT_AVAILABLE=Event not available
+component.component_not_available=Component not available
+eventname.event_not_available=Event not available
 
 
-component.ACTIVITY_REPORT=Activity report
-component.ASSIGNMENT=Assignment
-component.CHAT=Chat
-component.CHOICE=Choice
-component.COURSE_PARTICIPATION=Course participation
-component.EXCEL_SPREADSHEET=Excel spreadsheet
-component.FEEDBACK=Feedback
-component.FILE=File
-component.FILE_SUBMISSIONS=File submissions
-component.FOLDER=Folder
-component.FORUM=Forum
-component.GLOSSARY=Glossary
-component.GRADER_REPORT=Grader report
-component.GUIA_DOCENTE=Guía Docente
-component.HOTPOT_MODULE=HotPot module
-component.LIVE_LOGS=Live logs
-component.LOGS=Logs
-component.ONLINE_TEXT_SUBMISSIONS=Online text submissions
-component.OPENDOCUMENT_SPREADSHEET=OpenDocument spreadsheet
-component.OUTCOMES_REPORT=Outcomes report
-component.OVERVIEW_REPORT=Overview report
-component.PAGE=Page
-component.PLAIN_TEXT_FILE=Plain text file
-component.QUIZ=Quiz
-component.RECYCLE_BIN=Recycle bin
-component.SINGLE_VIEW=Single view
-component.SUBMISSION_COMMENTS=Submission comments
-component.SYSTEM=System
-component.TURNITIN_ASSIGNMENT_2=Turnitin Assignment 2
-component.URL=URL
-component.USER_REPORT=User report
-component.USER_TOURS=User tours
-component.WIKI=Wiki
-component.WORKSHOP=Workshop
-component.XML_FILE=XML file
+component.activity_report=Activity report
+component.assignment=Assignment
+component.chat=Chat
+component.choice=Choice
+component.course_participation=Course participation
+component.excel_spreadsheet=Excel spreadsheet
+component.feedback=Feedback
+component.file=File
+component.file_submissions=File submissions
+component.folder=Folder
+component.forum=Forum
+component.glossary=Glossary
+component.grader_report=Grader report
+component.guia_docente=Guía docente
+component.hotpot_module=Hotpot module
+component.live_logs=Live logs
+component.logs=Logs
+component.online_text_submissions=Online text submissions
+component.opendocument_spreadsheet=Opendocument spreadsheet
+component.outcomes_report=Outcomes report
+component.overview_report=Overview report
+component.page=Page
+component.plain_text_file=Plain text file
+component.quiz=Quiz
+component.recycle_bin=Recycle bin
+component.single_view=Single view
+component.submission_comments=Submission comments
+component.system=System
+component.turnitin_assignment_2=Turnitin assignment 2
+component.url=Url
+component.user_report=User report
+component.user_tours=User tours
+component.wiki=Wiki
+component.workshop=Workshop
+component.xml_file=Xml file
 
-eventname.ACTIVITY_REPORT_VIEWED=Activity report viewed
-eventname.ADD_SUBMISSION=Add Submission
-eventname.ALL_THE_SUBMISSIONS_ARE_BEING_DOWNLOADED=All the submissions are being downloaded.
-eventname.AN_ONLINE_TEXT_HAS_BEEN_UPLOADED=An online text has been uploaded.
-eventname.ASSIGNMENT_OVERRIDE_CREATED=Assignment override created
-eventname.ASSIGNMENT_OVERRIDE_DELETED=Assignment override deleted
-eventname.ASSIGNMENT_OVERRIDE_UPDATED=Assignment override updated
-eventname.A_FILE_HAS_BEEN_UPLOADED=A file has been uploaded.
-eventname.A_SUBMISSION_HAS_BEEN_SUBMITTED=A submission has been submitted.
-eventname.BADGE_LISTING_VIEWED=Badge listing viewed
-eventname.CALENDAR_EVENT_CREATED=Calendar event created
-eventname.CALENDAR_EVENT_DELETED=Calendar event deleted
-eventname.CALENDAR_EVENT_UPDATED=Calendar event updated
-eventname.CHOICE_ANSWER_ADDED=Choice answer added
-eventname.CHOICE_REPORT_VIEWED=Choice report viewed
-eventname.COMMENT_CREATED=Comment created
-eventname.COMMENT_DELETED=Comment deleted
-eventname.COURSE_ACTIVITY_COMPLETION_UPDATED=Course activity completion updated
-eventname.COURSE_BACKUP_CREATED=Course backup created
-eventname.COURSE_CREATED=Course created
-eventname.COURSE_MODULE_CREATED=Course module created
-eventname.COURSE_MODULE_DELETED=Course module deleted
-eventname.COURSE_MODULE_INSTANCE_LIST_VIEWED=Course module instance list viewed
-eventname.COURSE_MODULE_UPDATED=Course module updated
-eventname.COURSE_MODULE_VIEWED=Course module viewed
-eventname.COURSE_RESET_ENDED=Course reset ended
-eventname.COURSE_RESET_STARTED=Course reset started
-eventname.COURSE_SEARCHED=Course searched
-eventname.COURSE_SECTION_CREATED=Course section created
-eventname.COURSE_SECTION_UPDATED=Course section updated
-eventname.COURSE_SUMMARY_VIEWED=Course summary viewed
-eventname.COURSE_UPDATED=Course updated
-eventname.COURSE_USER_REPORT_VIEWED=Course user report viewed
-eventname.COURSE_VIEWED=Course viewed
-eventname.DISCUSSION_CREATED=Discussion created
-eventname.DISCUSSION_DELETED=Discussion deleted
-eventname.DISCUSSION_MOVED=Discussion moved
-eventname.DISCUSSION_SUBSCRIPTION_CREATED=Discussion subscription created
-eventname.DISCUSSION_VIEWED=Discussion viewed
-eventname.ENROLMENT_INSTANCE_CREATED=Enrolment instance created
-eventname.ENTRY_HAS_BEEN_CREATED=Entry has been created
-eventname.ENTRY_HAS_BEEN_UPDATED=Entry has been updated
-eventname.ENTRY_HAS_BEEN_VIEWED=Entry has been viewed
-eventname.EVALUATION_SYSTEM_CREATED=Evaluation system created
-eventname.EVALUATION_SYSTEM_MODIFIED=Evaluation system modified
-eventname.FOLDER_UPDATED=Folder updated
-eventname.GRADER_REPORT_VIEWED=Grader report viewed
-eventname.GRADE_DELETED=Grade deleted
-eventname.GRADE_OUTCOMES_REPORT_VIEWED=Grade outcomes report viewed
-eventname.GRADE_OVERVIEW_REPORT_VIEWED=Grade overview report viewed
-eventname.GRADE_SINGLE_VIEW_REPORT_VIEWED=Grade single view report viewed.
-eventname.GRADE_USER_REPORT_VIEWED=Grade user report viewed
-eventname.GRADING_FORM_VIEWED=Grading form viewed
-eventname.GRADING_TABLE_VIEWED=Grading table viewed
-eventname.GROUPING_CREATED=Grouping created
-eventname.GROUP_CREATED=Group created
-eventname.GROUP_DELETED=Group deleted
-eventname.GROUP_MEMBER_ADDED=Group member added
-eventname.GROUP_MEMBER_REMOVED=Group member removed
-eventname.HOTPOT_ATTEMPT_STARTED=HotPot attempt started
-eventname.HOTPOT_ATTEMPT_SUBMITTED=HotPot attempt submitted
-eventname.ITEM_CREATED=Item created
-eventname.ITEM_DELETED=Item deleted
-eventname.LIST_SUBMISSIONS=List Submissions
-eventname.LIVE_LOG_REPORT_VIEWED=Live log report viewed
-eventname.LOG_REPORT_VIEWED=Log report viewed
-eventname.MESSAGE_SENT=Message sent
-eventname.OPENDOCUMENT_GRADE_EXPORTED=OpenDocument grade exported
-eventname.OUTLINE_REPORT_VIEWED=Outline report viewed
-eventname.OUTSTANDING_RATINGS_MODIFIED=Outstanding ratings modified
-eventname.PARTICIPATION_REPORT_VIEWED=Participation report viewed
-eventname.POST_CREATED=Post created
-eventname.POST_DELETED=Post deleted
-eventname.POST_UPDATED=Post updated
-eventname.QUESTION_CATEGORY_CREATED=Question category created
-eventname.QUESTION_MANUALLY_GRADED=Question manually graded
-eventname.QUIZ_ATTEMPT_ABANDONED=Quiz attempt abandoned
-eventname.QUIZ_ATTEMPT_PREVIEW_STARTED=Quiz attempt preview started
-eventname.QUIZ_ATTEMPT_REVIEWED=Quiz attempt reviewed
-eventname.QUIZ_ATTEMPT_STARTED=Quiz attempt started
-eventname.QUIZ_ATTEMPT_SUBMITTED=Quiz attempt submitted
-eventname.QUIZ_ATTEMPT_SUMMARY_VIEWED=Quiz attempt summary viewed
-eventname.QUIZ_ATTEMPT_TIME_LIMIT_EXCEEDED=Quiz attempt time limit exceeded
-eventname.QUIZ_ATTEMPT_VIEWED=Quiz attempt viewed
-eventname.QUIZ_EDIT_PAGE_VIEWED=Quiz edit page viewed
-eventname.QUIZ_OVERRIDE_CREATED=Quiz override created
-eventname.QUIZ_OVERRIDE_DELETED=Quiz override deleted
-eventname.QUIZ_REPORT_VIEWED=Quiz report viewed
-eventname.RECENT_ACTIVITY_VIEWED=Recent activity viewed
-eventname.RESPONSE_SUBMITTED=Response submitted
-eventname.ROLE_ASSIGNED=Role assigned
-eventname.ROLE_UNASSIGNED=Role unassigned
-eventname.SCALE_CREATED=Scale created
-eventname.SESSIONS_VIEWED=Sessions viewed
-eventname.SOME_CONTENT_HAS_BEEN_POSTED=Some content has been posted.
-eventname.STEP_SHOWN=Step shown
-eventname.SUBJECT_MODIFIED=Subject modified
-eventname.SUBMISSION_CONFIRMATION_FORM_VIEWED=Submission confirmation form viewed.
-eventname.SUBMISSION_CREATED=Submission created.
-eventname.SUBMISSION_FORM_VIEWED=Submission form viewed.
-eventname.SUBMISSION_UPDATED=Submission updated.
-eventname.THE_STATUS_OF_THE_SUBMISSION_HAS_BEEN_UPDATED=The status of the submission has been updated.
-eventname.THE_STATUS_OF_THE_SUBMISSION_HAS_BEEN_VIEWED=The status of the submission has been viewed.
-eventname.THE_SUBMISSIONS_HAVE_BEEN_LOCKED_FOR_A_USER=The submissions have been locked for a user.
-eventname.THE_SUBMISSIONS_HAVE_BEEN_UNLOCKED_FOR_A_USER=The submissions have been unlocked for a user.
-eventname.THE_SUBMISSION_HAS_BEEN_GRADED=The submission has been graded.
-eventname.THE_USER_HAS_ACCEPTED_THE_STATEMENT_OF_THE_SUBMISSION=The user has accepted the statement of the submission.
-eventname.TOUR_ENDED=Tour ended
-eventname.TOUR_STARTED=Tour started
-eventname.TXT_GRADE_EXPORTED=TXT grade exported
-eventname.UNIT_MODIFIED=Unit modified
-eventname.USER_ENROLLED_IN_COURSE=User enrolled in course
-eventname.USER_GRADED=User graded
-eventname.USER_LIST_VIEWED=User list viewed
-eventname.USER_LOG_REPORT_VIEWED=User log report viewed
-eventname.USER_PROFILE_VIEWED=User profile viewed
-eventname.USER_REPORT_VIEWED=User report viewed
-eventname.USER_UNENROLLED_FROM_COURSE=User unenrolled from course
-eventname.XLS_GRADE_EXPORTED=XLS grade exported
-eventname.XML_GRADE_EXPORTED=XML grade exported
-eventname.ZIP_ARCHIVE_OF_FOLDER_DOWNLOADED=Zip archive of folder downloaded
+eventname.activity_report_viewed=Activity report viewed
+eventname.add_submission=Add submission
+eventname.all_the_submissions_are_being_downloaded=All the submissions are being downloaded.
+eventname.an_online_text_has_been_uploaded=An online text has been uploaded.
+eventname.assignment_override_created=Assignment override created
+eventname.assignment_override_deleted=Assignment override deleted
+eventname.assignment_override_updated=Assignment override updated
+eventname.a_file_has_been_uploaded=A file has been uploaded.
+eventname.a_submission_has_been_submitted=A submission has been submitted.
+eventname.badge_listing_viewed=Badge listing viewed
+eventname.calendar_event_created=Calendar event created
+eventname.calendar_event_deleted=Calendar event deleted
+eventname.calendar_event_updated=Calendar event updated
+eventname.choice_answer_added=Choice answer added
+eventname.choice_report_viewed=Choice report viewed
+eventname.comment_created=Comment created
+eventname.comment_deleted=Comment deleted
+eventname.course_activity_completion_updated=Course activity completion updated
+eventname.course_backup_created=Course backup created
+eventname.course_created=Course created
+eventname.course_module_created=Course module created
+eventname.course_module_deleted=Course module deleted
+eventname.course_module_instance_list_viewed=Course module instance list viewed
+eventname.course_module_updated=Course module updated
+eventname.course_module_viewed=Course module viewed
+eventname.course_reset_ended=Course reset ended
+eventname.course_reset_started=Course reset started
+eventname.course_searched=Course searched
+eventname.course_section_created=Course section created
+eventname.course_section_updated=Course section updated
+eventname.course_summary_viewed=Course summary viewed
+eventname.course_updated=Course updated
+eventname.course_user_report_viewed=Course user report viewed
+eventname.course_viewed=Course viewed
+eventname.discussion_created=Discussion created
+eventname.discussion_deleted=Discussion deleted
+eventname.discussion_moved=Discussion moved
+eventname.discussion_subscription_created=Discussion subscription created
+eventname.discussion_viewed=Discussion viewed
+eventname.enrolment_instance_created=Enrolment instance created
+eventname.entry_has_been_created=Entry has been created
+eventname.entry_has_been_updated=Entry has been updated
+eventname.entry_has_been_viewed=Entry has been viewed
+eventname.evaluation_system_created=Evaluation system created
+eventname.evaluation_system_modified=Evaluation system modified
+eventname.folder_updated=Folder updated
+eventname.grader_report_viewed=Grader report viewed
+eventname.grade_deleted=Grade deleted
+eventname.grade_outcomes_report_viewed=Grade outcomes report viewed
+eventname.grade_overview_report_viewed=Grade overview report viewed
+eventname.grade_single_view_report_viewed=Grade single view report viewed.
+eventname.grade_user_report_viewed=Grade user report viewed
+eventname.grading_form_viewed=Grading form viewed
+eventname.grading_table_viewed=Grading table viewed
+eventname.grouping_created=Grouping created
+eventname.group_created=Group created
+eventname.group_deleted=Group deleted
+eventname.group_member_added=Group member added
+eventname.group_member_removed=Group member removed
+eventname.hotpot_attempt_started=Hotpot attempt started
+eventname.hotpot_attempt_submitted=Hotpot attempt submitted
+eventname.item_created=Item created
+eventname.item_deleted=Item deleted
+eventname.list_submissions=List submissions
+eventname.live_log_report_viewed=Live log report viewed
+eventname.log_report_viewed=Log report viewed
+eventname.message_sent=Message sent
+eventname.opendocument_grade_exported=Opendocument grade exported
+eventname.outline_report_viewed=Outline report viewed
+eventname.outstanding_ratings_modified=Outstanding ratings modified
+eventname.participation_report_viewed=Participation report viewed
+eventname.post_created=Post created
+eventname.post_deleted=Post deleted
+eventname.post_updated=Post updated
+eventname.question_category_created=Question category created
+eventname.question_manually_graded=Question manually graded
+eventname.quiz_attempt_abandoned=Quiz attempt abandoned
+eventname.quiz_attempt_preview_started=Quiz attempt preview started
+eventname.quiz_attempt_reviewed=Quiz attempt reviewed
+eventname.quiz_attempt_started=Quiz attempt started
+eventname.quiz_attempt_submitted=Quiz attempt submitted
+eventname.quiz_attempt_summary_viewed=Quiz attempt summary viewed
+eventname.quiz_attempt_time_limit_exceeded=Quiz attempt time limit exceeded
+eventname.quiz_attempt_viewed=Quiz attempt viewed
+eventname.quiz_edit_page_viewed=Quiz edit page viewed
+eventname.quiz_override_created=Quiz override created
+eventname.quiz_override_deleted=Quiz override deleted
+eventname.quiz_report_viewed=Quiz report viewed
+eventname.recent_activity_viewed=Recent activity viewed
+eventname.response_submitted=Response submitted
+eventname.role_assigned=Role assigned
+eventname.role_unassigned=Role unassigned
+eventname.scale_created=Scale created
+eventname.sessions_viewed=Sessions viewed
+eventname.some_content_has_been_posted=Some content has been posted.
+eventname.step_shown=Step shown
+eventname.subject_modified=Subject modified
+eventname.submission_confirmation_form_viewed=Submission confirmation form viewed.
+eventname.submission_created=Submission created.
+eventname.submission_form_viewed=Submission form viewed.
+eventname.submission_updated=Submission updated.
+eventname.the_status_of_the_submission_has_been_updated=The status of the submission has been updated.
+eventname.the_status_of_the_submission_has_been_viewed=The status of the submission has been viewed.
+eventname.the_submissions_have_been_locked_for_a_user=The submissions have been locked for a user.
+eventname.the_submissions_have_been_unlocked_for_a_user=The submissions have been unlocked for a user.
+eventname.the_submission_has_been_graded=The submission has been graded.
+eventname.the_user_has_accepted_the_statement_of_the_submission=The user has accepted the statement of the submission.
+eventname.tour_ended=Tour ended
+eventname.tour_started=Tour started
+eventname.txt_grade_exported=Txt grade exported
+eventname.unit_modified=Unit modified
+eventname.user_enrolled_in_course=User enrolled in course
+eventname.user_graded=User graded
+eventname.user_list_viewed=User list viewed
+eventname.user_log_report_viewed=User log report viewed
+eventname.user_profile_viewed=User profile viewed
+eventname.user_report_viewed=User report viewed
+eventname.user_unenrolled_from_course=User unenrolled from course
+eventname.xls_grade_exported=Xls grade exported
+eventname.xml_grade_exported=Xml grade exported
+eventname.zip_archive_of_folder_downloaded=Zip archive of folder downloaded
 
 
