--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -89,168 +89,168 @@ chartlabel.atypicalValue=Valor Atipico
 chart.mean=Media
 
 
-component.COMPONENT_NOT_AVAILABLE=Component no disponible
-eventname.EVENT_NOT_AVAILABLE=Evento no disponible
+component.component_not_available=Componente no disponible
+eventname.event_not_available=Evento no disponible
 
 
 
-component.ACTIVITY_REPORT=Informe de actividades
-component.ASSIGNMENT=Tarea
-component.CHAT=Chat
-component.CHOICE=Consulta
-component.COURSE_PARTICIPATION=Course participation
-component.EXCEL_SPREADSHEET=Hoja de cálculo de Excel
-component.FEEDBACK=Encuesta
-component.FILE=Archivo
-component.FILE_SUBMISSIONS=Envíos de archivos
-component.FOLDER=Carpeta
-component.FORUM=Foro
-component.GLOSSARY=Glosario
-component.GRADER_REPORT=Informe de calificaciones
-component.GUIA_DOCENTE=Guía Docente
-component.HOTPOT_MODULE=HotPot module
-component.LIVE_LOGS=Registros activos
-component.LOGS=Registros
-component.ONLINE_TEXT_SUBMISSIONS=Envíos de texto online
-component.OPENDOCUMENT_SPREADSHEET=OpenDocument spreadsheet
-component.OUTCOMES_REPORT=Informe de resultados
-component.OVERVIEW_REPORT=Informe general
-component.PAGE=Página
-component.PLAIN_TEXT_FILE=Fichero de texto plano
-component.QUIZ=Cuestionario
-component.RECYCLE_BIN=Papelera de reciclaje
-component.SINGLE_VIEW=Vista única
-component.SUBMISSION_COMMENTS=Enviar comentarios
-component.SYSTEM=Sistema
-component.TURNITIN_ASSIGNMENT_2=Turnitin Assignment 2
-component.URL=URL
-component.USER_REPORT=Informe de usuario
-component.USER_TOURS=Visitas de los usuarios
-component.WIKI=Wiki
-component.WORKSHOP=Taller
-component.XML_FILE=Fichero XML
+component.activity_report=Informe de actividades
+component.assignment=Tarea
+component.chat=Chat
+component.choice=Consulta
+component.course_participation=Course participation
+component.excel_spreadsheet=Hoja de cálculo de excel
+component.feedback=Encuesta
+component.file=Archivo
+component.file_submissions=Envíos de archivos
+component.folder=Carpeta
+component.forum=Foro
+component.glossary=Glosario
+component.grader_report=Informe de calificaciones
+component.guia_docente=Guía docente
+component.hotpot_module=Hotpot module
+component.live_logs=Registros activos
+component.logs=Registros
+component.online_text_submissions=Envíos de texto online
+component.opendocument_spreadsheet=Opendocument spreadsheet
+component.outcomes_report=Informe de resultados
+component.overview_report=Informe general
+component.page=Página
+component.plain_text_file=Fichero de texto plano
+component.quiz=Cuestionario
+component.recycle_bin=Papelera de reciclaje
+component.single_view=Vista única
+component.submission_comments=Enviar comentarios
+component.system=Sistema
+component.turnitin_assignment_2=Turnitin assignment 2
+component.url=URL
+component.user_report=Informe de usuario
+component.user_tours=Visitas de los usuarios
+component.wiki=Wiki
+component.workshop=Taller
+component.xml_file=Fichero xml
 
-eventname.ACTIVITY_REPORT_VIEWED = Informe de actividad visto
-eventname.ADD_SUBMISSION = Agregar entrega
-eventname.ALL_THE_SUBMISSIONS_ARE_BEING_DOWNLOADED = Todas las entregas están siendo descargadas.
-eventname.AN_ONLINE_TEXT_HAS_BEEN_UPLOADED = Se ha subido un texto en línea.
-eventname.ASSIGNMENT_OVERRIDE_CREATED = Anulación de asignación creada
-eventname.ASSIGNMENT_OVERRIDE_DELETED = Anulación de asignación eliminada
-eventname.ASSIGNMENT_OVERRIDE_UPDATED = Anulación de asignación actualizada
-eventname.A_FILE_HAS_BEEN_UPLOADED = Se ha subido un archivo.
-eventname.A_SUBMISSION_HAS_BEEN_SUBMITTED = Una presentación ha sido enviada.
-eventname.BADGE_LISTING_VIEWED = Listado de la insignia visto
-eventname.CALENDAR_EVENT_CREATED = Evento calendario creado
-eventname.CALENDAR_EVENT_DELETED = Evento del calendario eliminado
-eventname.CALENDAR_EVENT_UPDATED = Evento calendario actualizado
-eventname.CHOICE_ANSWER_ADDED = Respuesta de elección añadida
-eventname.CHOICE_REPORT_VIEWED = Informe de elección visto
-eventname.COMMENT_CREATED = Comentario creado
-eventname.COMMENT_DELETED = Comentario borrado
-eventname.COURSE_ACTIVITY_COMPLETION_UPDATED = Finalización de la actividad del curso actualizada.
-eventname.COURSE_BACKUP_CREATED = Copia de seguridad del curso creado
-eventname.COURSE_CREATED = Curso creado
-eventname.COURSE_MODULE_CREATED = Módulo de curso creado
-eventname.COURSE_MODULE_DELETED = Módulo de curso eliminado
-eventname.COURSE_MODULE_INSTANCE_LIST_VIEWED = Lista de instancias del módulo del curso vista
-eventname.COURSE_MODULE_UPDATED = Módulo de curso actualizado
-eventname.COURSE_MODULE_VIEWED = Módulo de curso visto
-eventname.COURSE_RESET_ENDED = Reinicio del curso finalizado
-eventname.COURSE_RESET_STARTED = Reinicio del curso iniciado
-eventname.COURSE_SEARCHED = Curso buscado
-eventname.COURSE_SECTION_CREATED = Sección del curso creado
-eventname.COURSE_SECTION_UPDATED = Sección del curso actualizada
-eventname.COURSE_SUMMARY_VIEWED = Resumen del curso visto
-eventname.COURSE_UPDATED = Curso actualizado
-eventname.COURSE_USER_REPORT_VIEWED = Informe del usuario del curso visto
-eventname.COURSE_VIEWED = Curso visto
-eventname.DISCUSSION_CREATED = Discusión creada
-eventname.DISCUSSION_DELETED = Discusión eliminada
-eventname.DISCUSSION_MOVED = Discusión movida
-eventname.DISCUSSION_SUBSCRIPTION_CREATED = Suscripción de discusión creada
-eventname.DISCUSSION_VIEWED = Discusión vista
-eventname.ENROLMENT_INSTANCE_CREATED = Instancia de inscripción creada
-eventname.ENTRY_HAS_BEEN_CREATED = Se ha creado la entrada.
-eventname.ENTRY_HAS_BEEN_UPDATED = La entrada ha sido actualizada.
-eventname.ENTRY_HAS_BEEN_VIEWED = Se ha visto la entrada.
-eventname.EVALUATION_SYSTEM_CREATED = Sistema de evaluación creado
-eventname.EVALUATION_SYSTEM_MODIFIED = Sistema de evaluación modificado.
-eventname.FOLDER_UPDATED = Carpeta actualizada
-eventname.GRADER_REPORT_VIEWED = Informe de nivelador visto
-eventname.GRADE_DELETED = Grado eliminado
-eventname.GRADE_OUTCOMES_REPORT_VIEWED = Informe de resultados de calificaciones visto
-eventname.GRADE_OVERVIEW_REPORT_VIEWED = Informe general del grado visto
-eventname.GRADE_SINGLE_VIEW_REPORT_VIEWED = Informe de vista única de grado visto.
-eventname.GRADE_USER_REPORT_VIEWED = Informe del usuario de grado visto
-eventname.GRADING_FORM_VIEWED = Forma de calificación vista
-eventname.GRADING_TABLE_VIEWED = Tabla de clasificación vista
-eventname.GROUPING_CREATED = Agrupación creada
-eventname.GROUP_CREATED = Grupo creado
-eventname.GROUP_DELETED = Grupo eliminado
-eventname.GROUP_MEMBER_ADDED = Miembro del grupo agregado
-eventname.GROUP_MEMBER_REMOVED = Miembro del grupo eliminado
-eventname.HOTPOT_ATTEMPT_STARTED = Intento de hotpot iniciado
-eventname.HOTPOT_ATTEMPT_SUBMITTED = HotPot intento enviado
-eventname.ITEM_CREATED = Artículo creado
-eventname.ITEM_DELETED = Elemento eliminado
-eventname.LIST_SUBMISSIONS = Enumerar las presentaciones
-eventname.LIVE_LOG_REPORT_VIEWED = Informe de registro en vivo visto
-eventname.LOG_REPORT_VIEWED = Informe de registro visto
-eventname.MESSAGE_SENT = Mensaje enviado
-eventname.OPENDOCUMENT_GRADE_EXPORTED = Grado de OpenDocument exportado
-eventname.OUTLINE_REPORT_VIEWED = Esquema de informe visto
-eventname.OUTSTANDING_RATINGS_MODIFIED = Calificaciones sobresalientes modificadas
-eventname.PARTICIPATION_REPORT_VIEWED = Informe de participación visto
-eventname.POST_CREATED = Mensaje creado
-eventname.POST_DELETED = Publicación eliminada
-eventname.POST_UPDATED = Publicación actualizada
-eventname.QUESTION_CATEGORY_CREATED = Categoría de pregunta creada
-eventname.QUESTION_MANUALLY_GRADED = Pregunta calificada manualmente
-eventname.QUIZ_ATTEMPT_ABANDONED = Prueba de intento abandonado
-eventname.QUIZ_ATTEMPT_PREVIEW_STARTED = La vista previa del intento de prueba comenzó
-eventname.QUIZ_ATTEMPT_REVIEWED = Prueba de intento revisado
-eventname.QUIZ_ATTEMPT_STARTED = El intento de prueba comenzó
-eventname.QUIZ_ATTEMPT_SUBMITTED = Prueba de intento enviado
-eventname.QUIZ_ATTEMPT_SUMMARY_VIEWED = Resumen del intento de prueba visto
-eventname.QUIZ_ATTEMPT_TIME_LIMIT_EXCEEDED = El límite de tiempo de intento de prueba superó
-eventname.QUIZ_ATTEMPT_VIEWED = Intento de prueba visto
-eventname.QUIZ_EDIT_PAGE_VIEWED = Página de edición de prueba vista
-eventname.QUIZ_OVERRIDE_CREATED = Anulación de la prueba creada
-eventname.QUIZ_OVERRIDE_DELETED = Anulación de la prueba eliminada
-eventname.QUIZ_REPORT_VIEWED = Informe de prueba visto
-eventname.RECENT_ACTIVITY_VIEWED = Actividad reciente vista
-eventname.RESPONSE_SUBMITTED = Respuesta enviada
-eventname.ROLE_ASSIGNED = Rol asignado
-eventname.ROLE_UNASSIGNED = Rol sin asignar
-eventname.SCALE_CREATED = Escala creada
-eventname.SESSIONS_VIEWED = Sesiones vistas
-eventname.SOME_CONTENT_HAS_BEEN_POSTED = Algún contenido ha sido publicado.
-eventname.STEP_SHOWN = Paso mostrado
-eventname.SUBJECT_MODIFIED = Sujeto modificado
-eventname.SUBMISSION_CONFIRMATION_FORM_VIEWED = Formulario de confirmación de presentación visto.
-eventname.SUBMISSION_CREATED = Sumisión creada.
-eventname.SUBMISSION_FORM_VIEWED = Formulario de envío visto.
-eventname.SUBMISSION_UPDATED = Envío actualizado.
-eventname.THE_STATUS_OF_THE_SUBMISSION_HAS_BEEN_UPDATED = El estado del envío ha sido actualizado.
-eventname.THE_STATUS_OF_THE_SUBMISSION_HAS_BEEN_VIEWED = El estado de la presentación ha sido visto.
-eventname.THE_SUBMISSIONS_HAVE_BEEN_LOCKED_FOR_A_USER = Los envíos han sido bloqueados para un usuario.
-eventname.THE_SUBMISSIONS_HAVE_BEEN_UNLOCKED_FOR_A_USER = Los envíos han sido desbloqueados para un usuario.
-eventname.THE_SUBMISSION_HAS_BEEN_GRADED = La presentación ha sido calificada.
-eventname.THE_USER_HAS_ACCEPTED_THE_STATEMENT_OF_THE_SUBMISSION = El usuario ha aceptado la declaración del envío.
-eventname.TOUR_ENDED = El tour terminó
-eventname.TOUR_STARTED = Gira iniciada
-eventname.TXT_GRADE_EXPORTED = Grado TXT exportado
-eventname.UNIT_MODIFIED = Unidad modificada
-eventname.USER_ENROLLED_IN_COURSE = Usuario matriculado en curso
-eventname.USER_GRADED = Usuario calificado
-eventname.USER_LIST_VIEWED = Lista de usuarios vistos
-eventname.USER_LOG_REPORT_VIEWED = Informe de registro de usuario visto
-eventname.USER_PROFILE_VIEWED = Perfil de usuario visto
-eventname.USER_REPORT_VIEWED = Informe de usuario visto
-eventname.USER_UNENROLLED_FROM_COURSE = Usuario no inscrito en el curso
-eventname.XLS_GRADE_EXPORTED = Grado XLS exportado
-eventname.XML_GRADE_EXPORTED = Grado XML exportado
-eventname.ZIP_ARCHIVE_OF_FOLDER_DOWNLOADED = Archivo zip de la carpeta descargada
+eventname.activity_report_viewed=Informe de actividad visto
+eventname.add_submission=Agregar entrega
+eventname.all_the_submissions_are_being_downloaded=Todas las entregas están siendo descargadas.
+eventname.an_online_text_has_been_uploaded=Se ha subido un texto en línea.
+eventname.assignment_override_created=Anulación de asignación creada
+eventname.assignment_override_deleted=Anulación de asignación eliminada
+eventname.assignment_override_updated=Anulación de asignación actualizada
+eventname.a_file_has_been_uploaded=Se ha subido un archivo.
+eventname.a_submission_has_been_submitted=Una presentación ha sido enviada.
+eventname.badge_listing_viewed=Listado de la insignia visto
+eventname.calendar_event_created=Evento calendario creado
+eventname.calendar_event_deleted=Evento del calendario eliminado
+eventname.calendar_event_updated=Evento calendario actualizado
+eventname.choice_answer_added=Respuesta de elección añadida
+eventname.choice_report_viewed=Informe de elección visto
+eventname.comment_created=Comentario creado
+eventname.comment_deleted=Comentario borrado
+eventname.course_activity_completion_updated=Finalización de la actividad del curso actualizada.
+eventname.course_backup_created=Copia de seguridad del curso creado
+eventname.course_created=Curso creado
+eventname.course_module_created=Módulo de curso creado
+eventname.course_module_deleted=Módulo de curso eliminado
+eventname.course_module_instance_list_viewed=Lista de instancias del módulo del curso vista
+eventname.course_module_updated=Módulo de curso actualizado
+eventname.course_module_viewed=Módulo de curso visto
+eventname.course_reset_ended=Reinicio del curso finalizado
+eventname.course_reset_started=Reinicio del curso iniciado
+eventname.course_searched=Curso buscado
+eventname.course_section_created=Sección del curso creado
+eventname.course_section_updated=Sección del curso actualizada
+eventname.course_summary_viewed=Resumen del curso visto
+eventname.course_updated=Curso actualizado
+eventname.course_user_report_viewed=Informe del usuario del curso visto
+eventname.course_viewed=Curso visto
+eventname.discussion_created=Discusión creada
+eventname.discussion_deleted=Discusión eliminada
+eventname.discussion_moved=Discusión movida
+eventname.discussion_subscription_created=Suscripción de discusión creada
+eventname.discussion_viewed=Discusión vista
+eventname.enrolment_instance_created=Instancia de inscripción creada
+eventname.entry_has_been_created=Se ha creado la entrada.
+eventname.entry_has_been_updated=La entrada ha sido actualizada.
+eventname.entry_has_been_viewed=Se ha visto la entrada.
+eventname.evaluation_system_created=Sistema de evaluación creado
+eventname.evaluation_system_modified=Sistema de evaluación modificado.
+eventname.folder_updated=Carpeta actualizada
+eventname.grader_report_viewed=Informe de nivelador visto
+eventname.grade_deleted=Grado eliminado
+eventname.grade_outcomes_report_viewed=Informe de resultados de calificaciones visto
+eventname.grade_overview_report_viewed=Informe general del grado visto
+eventname.grade_single_view_report_viewed=Informe de vista única de grado visto.
+eventname.grade_user_report_viewed=Informe del usuario de grado visto
+eventname.grading_form_viewed=Forma de calificación vista
+eventname.grading_table_viewed=Tabla de clasificación vista
+eventname.grouping_created=Agrupación creada
+eventname.group_created=Grupo creado
+eventname.group_deleted=Grupo eliminado
+eventname.group_member_added=Miembro del grupo agregado
+eventname.group_member_removed=Miembro del grupo eliminado
+eventname.hotpot_attempt_started=Intento de hotpot iniciado
+eventname.hotpot_attempt_submitted=Hotpot intento enviado
+eventname.item_created=Artículo creado
+eventname.item_deleted=Elemento eliminado
+eventname.list_submissions=Enumerar las presentaciones
+eventname.live_log_report_viewed=Informe de registro en vivo visto
+eventname.log_report_viewed=Informe de registro visto
+eventname.message_sent=Mensaje enviado
+eventname.opendocument_grade_exported=Grado de opendocument exportado
+eventname.outline_report_viewed=Esquema de informe visto
+eventname.outstanding_ratings_modified=Calificaciones sobresalientes modificadas
+eventname.participation_report_viewed=Informe de participación visto
+eventname.post_created=Mensaje creado
+eventname.post_deleted=Publicación eliminada
+eventname.post_updated=Publicación actualizada
+eventname.question_category_created=Categoría de pregunta creada
+eventname.question_manually_graded=Pregunta calificada manualmente
+eventname.quiz_attempt_abandoned=Prueba de intento abandonado
+eventname.quiz_attempt_preview_started=La vista previa del intento de prueba comenzó
+eventname.quiz_attempt_reviewed=Prueba de intento revisado
+eventname.quiz_attempt_started=El intento de prueba comenzó
+eventname.quiz_attempt_submitted=Prueba de intento enviado
+eventname.quiz_attempt_summary_viewed=Resumen del intento de prueba visto
+eventname.quiz_attempt_time_limit_exceeded=El límite de tiempo de intento de prueba superó
+eventname.quiz_attempt_viewed=Intento de prueba visto
+eventname.quiz_edit_page_viewed=Página de edición de prueba vista
+eventname.quiz_override_created=Anulación de la prueba creada
+eventname.quiz_override_deleted=Anulación de la prueba eliminada
+eventname.quiz_report_viewed=Informe de prueba visto
+eventname.recent_activity_viewed=Actividad reciente vista
+eventname.response_submitted=Respuesta enviada
+eventname.role_assigned=Rol asignado
+eventname.role_unassigned=Rol sin asignar
+eventname.scale_created=Escala creada
+eventname.sessions_viewed=Sesiones vistas
+eventname.some_content_has_been_posted=Algún contenido ha sido publicado.
+eventname.step_shown=Paso mostrado
+eventname.subject_modified=Sujeto modificado
+eventname.submission_confirmation_form_viewed=Formulario de confirmación de presentación visto.
+eventname.submission_created=Sumisión creada.
+eventname.submission_form_viewed=Formulario de envío visto.
+eventname.submission_updated=Envío actualizado.
+eventname.the_status_of_the_submission_has_been_updated=El estado del envío ha sido actualizado.
+eventname.the_status_of_the_submission_has_been_viewed=El estado de la presentación ha sido visto.
+eventname.the_submissions_have_been_locked_for_a_user=Los envíos han sido bloqueados para un usuario.
+eventname.the_submissions_have_been_unlocked_for_a_user=Los envíos han sido desbloqueados para un usuario.
+eventname.the_submission_has_been_graded=La presentación ha sido calificada.
+eventname.the_user_has_accepted_the_statement_of_the_submission=El usuario ha aceptado la declaración del envío.
+eventname.tour_ended=El tour terminó
+eventname.tour_started=Gira iniciada
+eventname.txt_grade_exported=Frado txt exportado
+eventname.unit_modified=Unidad modificada
+eventname.user_enrolled_in_course=Usuario matriculado en curso
+eventname.user_graded=Usuario calificado
+eventname.user_list_viewed=Lista de usuarios vistos
+eventname.user_log_report_viewed=Informe de registro de usuario visto
+eventname.user_profile_viewed=Perfil de usuario visto
+eventname.user_report_viewed=Informe de usuario visto
+eventname.user_unenrolled_from_course=Usuario no inscrito en el curso
+eventname.xls_grade_exported=Grado xls exportado
+eventname.xml_grade_exported=Grado xml exportado
+eventname.zip_archive_of_folder_downloaded=Archivo zip de la carpeta descargada
 
 
 
