Añadido la categoria del curso a la lista y otras pequeñas mejoras #44

--- a/python/Rastreador de componentes y eventos.ipynb
+++ b/python/Rastreador de componentes y eventos.ipynb
@@ -31,7 +31,7 @@
     "# Carga de ficheros CSV y JSON (opcional)\n",
     "En esta celda permite seleccionar los ficheros CSV y opcionalmente un fichero .json donde se guardan los componentes y eventos generados anteriormente. En ambos casos se podran seleccionar a partir de una venta de selección de ficheros.\n",
     "Los CSV se puede elegir varios a la vez. Si no tenemos fichero JSON, damos en el botón de cancelar. <br>\n",
-    "**OJO** Tener cuidado al elegir los CSV y JSON esten en el mismo idioma.<br><br>\n",
+    "**OJO** Los ficheros CSV deben estar en inglés.<br><br>\n",
     "Fuente del código de la celda: https://stackoverflow.com/a/42398049"
    ]
   },
@@ -96,18 +96,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "for csvFile in csvFiles: #por cada fichero seleccionado, lo parsemamos uno a uno.\n",
     "    with open(csvFile,encoding='utf-8') as file:\n",
-    "        #reader = csv.DictReader(file, delimiter=',') #Lector de CSV con acceso a una columna por el nombre de encabezado\n",
-    "        reader=csv.reader(file, delimiter=',') #Lector de CSV con acceso a una comlmna a traves del indice.\n",
+    "        reader = csv.DictReader(file, delimiter=',') #Lector de CSV con acceso a una columna por el nombre de encabezado\n",
+    "        #reader=csv.reader(file, delimiter=',') #Lector de CSV con acceso a una comlmna a traves del indice.\n",
     "        for row in reader:\n",
+    "            ''' #Descomentar si se quiere usar para cualquier idioma\n",
     "            component=row[4]#Se supone que el componente sencuentra por la cuarta columna empezando por 0\n",
     "            event=row[5]\n",
     "            description=row[6]\n",
+    "            '''\n",
+    "            component=row[\"Component\"]\n",
+    "            event=row[\"Event name\"]\n",
+    "            description=row[\"Description\"]\n",
+    "            \n",
     "            \n",
     "            descripNotNumber=re.sub(\"'[^']+'\",\"''\",description) #eliminamos el texto que esta entre comillas simples\n",
     "            descripNotNumber=re.sub(\"\\d+\", \"\", descripNotNumber) #eliminamos los numeros\n",
@@ -146,24 +153,6 @@
     "    json.dump( CM, f,indent=4,sort_keys=True,ensure_ascii=False )\n",
     "    print(\"Guardado como JSON\", filename)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
