--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -50,6 +50,7 @@ label.event=Event:
 label.participants=Participants:
 label.categoryitem=Category/Item:
 label.component=Component: 
+label.componentorevent=Component\nEvent
 btn.group=Group
 btn.rol=Rol
 btn.type=Type
