Cambiado el prompt text de host y añadido la opcion de  escalar el maximo #49 #50

--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -55,10 +55,11 @@ btn.group=Group
 btn.rol=Rol
 btn.type=Type
 
+label.setMax=Change suggested max scale: 
 label.groupbydate= Group by: 
 label.startdate=Start reference date: 
 label.enddate=End reference date: 
-btn.filter=Apply filter
+btn.filter=Apply dates filter
 tab.logs=Logs
 tab.component=Components
 tab.event=Events
