--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -56,10 +56,11 @@ btn.group=Grupo
 btn.rol=Rol
 btn.type=Tipo
 
+label.setMax=Cambiar escala máxima sugerida: 
 label.groupbydate= Agrupar por: 
 label.startdate=Fecha de refencia inicial: 
 label.enddate=Fecha de referencia final: 
-btn.filter=Aplicar filtro
+btn.filter=Aplicar filtro de fechas
 tab.logs=Registros
 tab.grades=Calificaciones
 tab.component=Componentes
